# x11pp

./: CMakeLists.txt  README.md  build.sh  readme.md
include/: WindowMgrLib.h  x11pp.h
src/: Main.cpp  WindowMgrLib.cpp  x11pp.cpp  x11pp_test.cpp
